labdell/ingress_lixo/ingress_ok/ingress_svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-ingress-lb
  name: ingress-controller
  namespace: ingress
spec:
  type: NodePort
  ports:
    - nodePort: 32080
      name: http
      port: 80
      protocol: TCP
      targetPort: http
      appProtocol: http
    - nodePort: 32443
      name: https
      port: 443
      protocol: TCP
      targetPort: https
      appProtocol: https
    - nodePort: 31443
      name: mgmt
      port: 8443
      protocol: TCP
      targetPort: https
      appProtocol: https
  selector:
    app: nginx-ingress-lb
